--- a/index.html
+++ b/index.html
@@ -234,64 +234,66 @@
 		</div>
 
 		<div class="container my-2">
-			<div class="row">
-				<div class="col-lg-2">
-					<div class="card">
-						<i class="fa-solid fa-book-open-reader text-center my-4" style="font-size:50px"></i>
-						<div class="card-body">
-							<h5 class="card-title">SPADA</h5>
-							<p class="card-text">SisFo Pembelajaran Daring</p>
-							<a href="#" class="btn btn-warning">Klik Disini</a>
+			<div class="d-flex flex-column align-items-center mb-4">
+				<div class="row">
+					<div class="col-lg-2">
+						<div class="card">
+							<i class="fa-solid fa-book-open-reader text-center my-4" style="font-size:50px"></i>
+							<div class="card-body d-flex flex-column align-items-center">
+								<h5 class="card-title">SPADA</h5>
+								<p class="card-text">SisFo Pembelajaran Daring</p>
+								<a href="#" class="btn btn-warning">Klik Disini</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-2">
-					<div class="card">
-						<i class="fa-solid fa-book text-center my-4" style="font-size:50px"></i>
-						<div class="card-body">
-							<h5 class="card-title">SITA</h5>
-							<p class="card-text">SisFo Tugas Akhir</p>
-							<a href="#" class="btn btn-warning">Klik Disini</a>
+					<div class="col-lg-2">
+						<div class="card">
+							<i class="fa-solid fa-book text-center my-4" style="font-size:50px"></i>
+							<div class="card-body d-flex flex-column align-items-center">
+								<h5 class="card-title">SITA</h5>
+								<p class="card-text">SisFo Tugas Akhir</p>
+								<a href="#" class="btn btn-warning">Klik Disini</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-2">
-					<div class="card">
-						<i class="fa-solid fa-id-card text-center my-4" style="font-size:50px"></i>
-						<div class="card-body">
-							<h5 class="card-title">SIAKAD</h5>
-							<p class="card-text">SisFo Akademik</p>
-							<a href="#" class="btn btn-warning">Klik Disini</a>
+					<div class="col-lg-2">
+						<div class="card">
+							<i class="fa-solid fa-id-card text-center my-4" style="font-size:50px"></i>
+							<div class="card-body d-flex flex-column align-items-center">
+								<h5 class="card-title">SIAKAD</h5>
+								<p class="card-text">SisFo Akademik</p>
+								<a href="#" class="btn btn-warning">Klik Disini</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-2">
-					<div class="card">
-						<i class="fa-solid fa-building text-center my-4" style="font-size:50px"></i>
-						<div class="card-body">
-							<h5 class="card-title">MBKM</h5>
-							<p class="card-text">SisFo MBKM</p>
-							<a href="#" class="btn btn-warning">Klik Disini</a>
+					<div class="col-lg-2">
+						<div class="card">
+							<i class="fa-solid fa-building text-center my-4" style="font-size:50px"></i>
+							<div class="card-body d-flex flex-column align-items-center">
+								<h5 class="card-title">MBKM</h5>
+								<p class="card-text">SisFo MBKM</p>
+								<a href="#" class="btn btn-warning">Klik Disini</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-2">
-					<div class="card">
-						<i class="fa-solid fa-comment-dots text-center my-4" style="font-size:50px"></i>
-						<div class="card-body">
-							<h5 class="card-title">SATIK</h5>
-							<p class="card-text">SisFo Saran & Kritik</p>
-							<a href="#" class="btn btn-warning">Klik Disini</a>
+					<div class="col-lg-2">
+						<div class="card">
+							<i class="fa-solid fa-comment-dots text-center my-4" style="font-size:50px"></i>
+							<div class="card-body d-flex flex-column align-items-center">
+								<h5 class="card-title">SATIK</h5>
+								<p class="card-text">SisFo Saran & Kritik</p>
+								<a href="#" class="btn btn-warning">Klik Disini</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-2">
-					<div class="card">
-						<i class="fa-solid fa-money-bill-wave text-center my-4" style="font-size:50px"></i>
-						<div class="card-body">
-							<h5 class="card-title">UKT</h5>
-							<p class="card-text">SisFo Uang Kuliah Tunggal</p>
-							<a href="#" class="btn btn-warning">Klik Disini</a>
+					<div class="col-lg-2">
+						<div class="card">
+							<i class="fa-solid fa-money-bill-wave text-center my-4" style="font-size:50px"></i>
+							<div class="card-body d-flex flex-column align-items-center">
+								<h5 class="card-title">UKT</h5>
+								<p class="card-text">SisFo Uang Kuliah Tunggal</p>
+								<a href="#" class="btn btn-warning">Klik Disini</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -457,8 +459,10 @@
 		<!--Mitra Kami-->
 		<div class="container">
 			<div class="title-container">
-				<h4 class="text-center mt-5">MITRA KAMI</h4>
-				<div class="title-line">
+				<div class="d-flex flex-column align-items-center mb-4">
+					<h4 class="text-center mt-5">MITRA KAMI</h4>
+					<div class="title-line my-4">
+					</div>
 				</div>
 				<div class="row mt-2 justify-content-center">
 					<div class="col-lg-3 p-1">
@@ -666,7 +670,7 @@
 						<i class="bi bi-facebook me-3"></i>
 						<i class="bi bi-instagram me-3"></i>
 						<i class="bi bi-youtube me-3"></i>
-						<i class="bi bi-tiktok"></i>
+						<i class="bi bi-tiktok me-3"></i>
 					</div>
 				</div>
 			</div>
