--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/solid.min.css"
 		integrity="sha512-/r+0SvLvMMSIf41xiuy19aNkXxI+3zb/BN8K9lnDDWI09VM0dwgTMzK7Qi5vv5macJ3VH4XZXr60ip7v13QnmQ=="
-		crossorigin="anonymous" referrerpolicy="no-referrer"   />
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 	<style>
@@ -88,11 +88,19 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Profil</a>
-					</li>
+					<li class="nav-item dropdown"></li>
+					<a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						aria-expanded="false">
+						Profil
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
+						<li><a class="dropdown-item" href="visi-misi.html">Visi dan Misi</a></li>
+						<li><a class="dropdown-item" href="Tujuan.html">Tujuan Strategis</a></li>
+						<li><a class="dropdown-item" href="Sasaran.html">Sasaran Strategis</a></li>
+					</ul>
 					<li class="nav-item dropdown"></li>
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
 						aria-expanded="false">
@@ -105,16 +113,36 @@
 						<li><a class="dropdown-item" href="#">D4 Animasi</a></li>
 					</ul>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">About Us</a>
+					<li class="nav-item dropdown"></li>
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						aria-expanded="false">
+						Akademik
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="Akreditasi.html">Akreditasi</a></li>
+						<li><a class="dropdown-item" href="Kalender.html">Kalender Akademik</a></li>
+					</ul>
+					<li class="nav-item dropdown"></li>
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						aria-expanded="false">
+						Penelitian & Kerjasama
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="Jurnal.html">Jurnal</a></li>
+						<li><a class="dropdown-item" href="Academy.html">academy</a></li>
+					</ul>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Contact Us</a>
-					</li>
+					<li class="nav-item dropdown"></li>
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						aria-expanded="false">
+						Contact Us
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="SaranMasukan.html">Saran dan Masukan</a></li>
+					</ul>
 			</div>
 		</div>
 	</nav>
-
 	<!--Carousel-->
 
 	<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
