--- a/Dosen.html
+++ b/Dosen.html
@@ -90,64 +90,82 @@
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Profil
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
-						<li><a class="dropdown-item" href="visi-misi.html">Visi dan Misi</a></li>
-						<li><a class="dropdown-item" href="Tujuan.html">Tujuan Strategis</a></li>
-						<li><a class="dropdown-item" href="Sasaran.html">Sasaran Strategis</a></li>
-					</ul>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Study Programs
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#">D3 Manajemen Informatika</a></li>
-						<li><a class="dropdown-item" href="#">D3 Teknik Komputer</a></li>
-						<li><a class="dropdown-item" href="#">D4 Teknologi Rekayasa Perangkat Lunak</a></li>
-						<li><a class="dropdown-item" href="#">D4 Animasi</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Profil
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
+							<li><a class="dropdown-item" href="visi-misi.html">Visi dan Misi</a></li>
+							<li><a class="dropdown-item" href="Tujuan.html">Tujuan Strategis</a></li>
+							<li><a class="dropdown-item" href="Sasaran.html">Sasaran Strategis</a></li>
+							<li><a class="dropdown-item" href="Struktur.html">Struktur Organisasi</a></li>
+							<li><a class="dropdown-item" href="Pimpinan.html">Pimpinan Jurusan</a></li>
+							<li><a class="dropdown-item" href="Dosen.html">Dosen/Staf Pengajar</a></li>
+							<li><a class="dropdown-item" href="Fasilitas.html">Fasilitas</a></li>
+
+
+						</ul>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Akademik
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Akreditasi.html">Akreditasi</a></li>
-						<li><a class="dropdown-item" href="Kalender.html">Kalender Akademik</a></li>
-					</ul>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Penelitian & Kerjasama
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Jurnal.html">Jurnal</a></li>
-						<li><a class="dropdown-item" href="Academy.html">Academy</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Study Programs
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">D3 Manajemen Informatika</a></li>
+							<li><a class="dropdown-item" href="#">D3 Teknik Komputer</a></li>
+							<li><a class="dropdown-item" href="#">D4 Teknologi Rekayasa Perangkat Lunak</a></li>
+							<li><a class="dropdown-item" href="#">D4 Animasi</a></li>
+						</ul>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Contact Us
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="SaranMasukan.html">Saran dan Masukan</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Akademik
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Akreditasi</a></li>
+							<li><a class="dropdown-item" href="#">Kalender Akademik</a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Penelitian & Kerjasama
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Jurnal</a></li>
+							<li><a class="dropdown-item" href="#">Academy</a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Contact Us
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Saran dan Masukan</a></li>
+						</ul>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</nav>
-
-	<div class="container">
-        <h2>Sejarah</h2>
-    </div>
 	
+    <div style="background-color: grey;">
+        <div class="container">
+            <div class="row py-3">
+                <div class="col-lg-6 text-start">
+                    <h3>Dosen/Staf Pengajar</h3>
+                </div>
+                <div class="col-lg-6 text-end">
+                    <a class="nav-link" href="index.html">Home</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            
+        </div>
+    </div>
 	
 
 		<!-- Footer-->
