--- a/Sasaran.html
+++ b/Sasaran.html
@@ -90,63 +90,147 @@
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Profil
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
-						<li><a class="dropdown-item" href="visi-misi.html">Visi dan Misi</a></li>
-						<li><a class="dropdown-item" href="Tujuan.html">Tujuan Strategis</a></li>
-						<li><a class="dropdown-item" href="Sasaran.html">Sasaran Strategis</a></li>
-					</ul>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Study Programs
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#">D3 Manajemen Informatika</a></li>
-						<li><a class="dropdown-item" href="#">D3 Teknik Komputer</a></li>
-						<li><a class="dropdown-item" href="#">D4 Teknologi Rekayasa Perangkat Lunak</a></li>
-						<li><a class="dropdown-item" href="#">D4 Animasi</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Profil
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
+							<li><a class="dropdown-item" href="visi-misi.html">Visi dan Misi</a></li>
+							<li><a class="dropdown-item" href="Tujuan.html">Tujuan Strategis</a></li>
+							<li><a class="dropdown-item" href="Sasaran.html">Sasaran Strategis</a></li>
+							<li><a class="dropdown-item" href="Struktur.html">Struktur Organisasi</a></li>
+							<li><a class="dropdown-item" href="Pimpinan.html">Pimpinan Jurusan</a></li>
+							<li><a class="dropdown-item" href="Dosen.html">Dosen/Staf Pengajar</a></li>
+							<li><a class="dropdown-item" href="Fasilitas.html">Fasilitas</a></li>
+
+
+						</ul>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Akademik
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Akreditasi.html">Akreditasi</a></li>
-						<li><a class="dropdown-item" href="Kalender.html">Kalender Akademik</a></li>
-					</ul>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Penelitian & Kerjasama
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Jurnal.html">Jurnal</a></li>
-						<li><a class="dropdown-item" href="Academy.html">cademy</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Study Programs
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">D3 Manajemen Informatika</a></li>
+							<li><a class="dropdown-item" href="#">D3 Teknik Komputer</a></li>
+							<li><a class="dropdown-item" href="#">D4 Teknologi Rekayasa Perangkat Lunak</a></li>
+							<li><a class="dropdown-item" href="#">D4 Animasi</a></li>
+						</ul>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Contact Us
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="SaranMasukan.html">Saran dan Masukan</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Akademik
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Akreditasi</a></li>
+							<li><a class="dropdown-item" href="#">Kalender Akademik</a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Penelitian & Kerjasama
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Jurnal</a></li>
+							<li><a class="dropdown-item" href="#">Academy</a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Contact Us
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Saran dan Masukan</a></li>
+						</ul>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</nav>
+	
 
-	<div class="container">
-        <h2>Sejarah</h2>
+	<div style="background-color: grey;">
+        <div class="container">
+            <div class="row py-3">
+                <div class="col-lg-6 text-start">
+                    <h3>Sasaran Strategis</h3>
+                </div>
+                <div class="col-lg-6 text-end">
+                    <a class="nav-link" href="index.html">Home</a>
+                </div>
+            </div>
+        </div>
     </div>
+	<div class="container my-5">
+	<p>
+		<ul>
+			<li><strong>Tata Pamong, Tata Kelola, dan Kerjasama</strong></li>
+			<ol type="a">
+			Sasaran-sasaran strategis yang dikembangkan untuk keunggulan ini dijelaskan sebagai berikut,
+			<li>Peningkatan Sistem Tata Pamong</li>
+			<li>Pengembangan sistem informasi terpadu</li>
+			<li>Penguatan Kerjasama</li>
+			<li>Program peningkatan kualitas kelembagaan</li>
+			</ol>
+		</ul>
+		<ul>
+			<li><strong>Mahasiswa</strong></li>
+			<ol type="a">
+				Sasaran trategis yang akan di dilaksanakan  adalah:
+				<li>Menyediaan sarana dan prasarana/fasilitas untuk kegiatan mahasiswa.</li>
+				<li>Bimbingan teknis/workshop bagi mahaiswa dan dosen pembimbing tentang program mahasiswa wirausaha dan program – program dari belmawa.</li>
+				<li>Peningkatan Kapasitas Kepemimpinan Mahasiswa</li>
+				<li>Bantuan Pendidikan kepada Mahasiswa</li>
+			</ol>
+		</ul>
+		<ul>
+			<li><strong>Sarana Prasarana</strong></li>
+			<ol type="a">
+				Sasaran-sasaran strategis untuk membangun keunggulan sarana dan prasarana mesti dilakukan, dengan uraian seperti dijelaskan pada bagian berikut ini:
+				<li>Modernisasi peralatan pembelajaran dan penelitian</li>
+				<li>Peningkatan efektifitas pemeliharaan dan keberlanjutan infrastruktur untuk keberlangsungan pembelajaran dan penelitian</li>
+			</ol>
+		</ul>
+		<ul>
+			<li><strong>Pendidikan</strong></li>
+			<ol type="a">
+				Sasaran strategis untuk membangun keunggulan pendidikan dapat dijelaskan sebagai berikut:
+				<li>Peningkatan Kualitas Lulusan</li>
+				<li>Penguatan penyelenggaraan pembelajaran berbasis resource sharing di level nasional dan internasional (credit transfer, credit earning, double degree/joint degree, student exchange, dan pertukaran dosen)</li>
+				<li>Penguatan pembelajaran dengan projek base learning yang berbasiskan teaching industry dan teaching factory dan didukung dengan pendanaan.</li>
+			</ol>
+		</ul>
+		<ul>
+			<li><strong>Penelitian</strong></li>
+			<ol type="a">
+				Untuk mencapai hal tersebut, maka terdapat dua sasaran strategis yang harus dicapai: yaitu penguatan proses bisnis pada kelembagaan P3M serta peningkatan kualitas output penelitian terapan.
+				<li>Penguatan proses bisnis pada kelembagaan</li>
+				<li>Peningkatan kualitas output penelitian</li>
+				<li>Menerapkan mekanisme monitoring kesesuaian penelitian DTPR dengan peta jalan dan penggunaan hasil evaluasi untuk perbaikan relevansi penelitian dan pengembangan keilmuan program studi</li>
+			</ol>
+		</ul>
+		<ul>
+			<li><strong>Pengabdian Kepada Masyarakat</strong></li>
+			<ol type="a">
+				Sasaran strategis yang perlu dikembangkan untuk mencapai arah kebijakan pengembangan bidang pengabdian pada masyarakat diantaranya yaitu:
+				<li>Peningkatan kuantitas dan kualitas PKM berbasis kearifan lokal</li>
+				<li>Memperkuat peran aktif Jurusan Teknologi Informasi dalam kerjasama PKM yang melibatkan multidisiplin ilmu.</li>
+				<li>Menerapkan hasil IPTEK dan Teknologi tepat guna melalui program PKM untuk memecahkan masalah yang ada di masyarakat</li>
+				<li>Menerapkan mekanisme monitoring kesesuaian PKM DTPR dan mahasiswa dengan peta jalan dan penggunaan hasil evaluasi untuk perbaikan relevansi PKM</li>
+			</ol>
+		</ul>
+		<ul>
+			<li><strong>Pendanaan</strong></li>
+			<ol type="a">
+				Sasaran strategis dalam bidang pendanaan adalah :
+				<li>Pengembangan sumber pendanaan Politeknik Negeri Padang</li>
+				<li>Penguatan Sistem Perencanaan, Penganggaran dan Monev PNP</li>
+			</ol>
+		</ul>
+	</p>
+</div>
+</div>
 	
 	
 
