--- a/visi-misi.html
+++ b/visi-misi.html
@@ -90,63 +90,103 @@
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Profil
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
-						<li><a class="dropdown-item" href="visi-misi.html">Visi dan Misi</a></li>
-						<li><a class="dropdown-item" href="Tujuan.html">Tujuan Strategis</a></li>
-						<li><a class="dropdown-item" href="Sasaran.html">Sasaran Strategis</a></li>
-					</ul>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Study Programs
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#">D3 Manajemen Informatika</a></li>
-						<li><a class="dropdown-item" href="#">D3 Teknik Komputer</a></li>
-						<li><a class="dropdown-item" href="#">D4 Teknologi Rekayasa Perangkat Lunak</a></li>
-						<li><a class="dropdown-item" href="#">D4 Animasi</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Profil
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="Sejarah.html">Sejarah</a></li>
+							<li><a class="dropdown-item" href="visi-misi.html">Visi dan Misi</a></li>
+							<li><a class="dropdown-item" href="Tujuan.html">Tujuan Strategis</a></li>
+							<li><a class="dropdown-item" href="Sasaran.html">Sasaran Strategis</a></li>
+							<li><a class="dropdown-item" href="Struktur.html">Struktur Organisasi</a></li>
+							<li><a class="dropdown-item" href="Pimpinan.html">Pimpinan Jurusan</a></li>
+							<li><a class="dropdown-item" href="Dosen.html">Dosen/Staf Pengajar</a></li>
+							<li><a class="dropdown-item" href="Fasilitas.html">Fasilitas</a></li>
+
+
+						</ul>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Akademik
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Akreditasi.html">Akreditasi</a></li>
-						<li><a class="dropdown-item" href="Kalender.html">Kalender Akademik</a></li>
-					</ul>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Penelitian & Kerjasama
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="Jurnal.html">Jurnal</a></li>
-						<li><a class="dropdown-item" href="Academy.html">Academy</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Study Programs
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">D3 Manajemen Informatika</a></li>
+							<li><a class="dropdown-item" href="#">D3 Teknik Komputer</a></li>
+							<li><a class="dropdown-item" href="#">D4 Teknologi Rekayasa Perangkat Lunak</a></li>
+							<li><a class="dropdown-item" href="#">D4 Animasi</a></li>
+						</ul>
 					</li>
-					<li class="nav-item dropdown"></li>
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false">
-						Contact Us
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="SaranMasukan.html">Saran dan Masukan</a></li>
-					</ul>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Akademik
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Akreditasi</a></li>
+							<li><a class="dropdown-item" href="#">Kalender Akademik</a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Penelitian & Kerjasama
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Jurnal</a></li>
+							<li><a class="dropdown-item" href="#">Academy</a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Contact Us
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Saran dan Masukan</a></li>
+						</ul>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</nav>
+	
 
-	<div class="container">
-        <h2>Sejarah</h2>
+	<div style="background-color: grey;">
+        <div class="container">
+            <div class="row py-3">
+                <div class="col-lg-6 text-start">
+                    <h3>Visi dan Misi</h3>
+                </div>
+                <div class="col-lg-6 text-end">
+                    <a class="nav-link" href="index.html">Home</a>
+                </div>
+            </div>
+        </div>
     </div>
+	<div class="container my-5">
+        <h5><strong>Visi :</strong></h5>
+			<p>Pada tahun 2025 menjadi institusi pendidikan vokasional terbaik tingkat nasional dibidang Teknologi Informasi, Bermartabat dan berwawasan Internasional</p>
+			<ol>
+				<li>Menyelenggarakan pendidikan vokasional dibidang Teknologi Informasi yang sesuai dengan perkembangan ilmu pengetahuan dan teknologi yang berwawasan Internasional.
+				<li>Menyelanggarakan penelitian yang inovatif dan adaptif dibidang Teknologi Informasi untuk pengembangan ilmu pengetahuan dan teknologi.</li>	
+				<li>Menerapkan ilmu pengetahuan dan teknologi dalam rangka memecahkan masalah dan meningkatkan taraf hidup masyarakat dibidang Teknologi Informasi.</li>
+				<li>Menjalin kerjasama yang produktif dan berkelanjutan dengan lembaga pendidikan, pemerintahan dan dunai usaha ditingkat Nasional dan Internasional dibidang Teknologi Informasi.</li>
+			</ol>
+		<h5><strong>Misi:</strong></h5>
+		<ol>
+			<li>Menyelenggarakan pendidikan vokasional dibidang Teknologi Informasi yang sesuai dengan perkembangan ilmu pengetahuan dan teknologi yang berwawasan Internasional.
+			<li>Menyelanggarakan penelitian yang inovatif dan adaptif dibidang Teknologi Informasi untuk pengembangan ilmu pengetahuan dan teknologi.</li>	
+			<li>Menerapkan ilmu pengetahuan dan teknologi dalam rangka memecahkan masalah dan meningkatkan taraf hidup masyarakat dibidang Teknologi Informasi.</li>
+			<li>Menjalin kerjasama yang produktif dan berkelanjutan dengan lembaga pendidikan, pemerintahan dan dunai usaha ditingkat Nasional dan Internasional dibidang Teknologi Informasi.</li>
+		</ol>
+		<p>Jurusan Teknologi Informasi memiliki empat tujuan yang merupakan turunan dari tujuan Politeknik Negeri Padang yang, sebagai berikut:</p>
+		<ol>
+			<li>Menghasilkan lulusan dibidang Teknologi Informasi yang kompeten, berdaya saing antar bangsa, bermartabat dan dan bertaqwa kepada Tuhan Yang Maha Esa</li>
+			<li>Menghasilkan penelitian dibidang Teknologi Informasi yang bermanfaat dan pengembangan dan penerapan ilmu pengetahuan dan teknologi, pencapaian hak atas kekayaan intelektual (HKI) dan paten</li>	
+			<li>Menghasilkan karya pengabdian kepada masyarakat dibidang Teknologi Informasi yang berbasis pada teknologi terapan untuk meningkatkan kesejahteraan masyarakat
+			</li>
+			<li>Terwujudnya kerjasama dengan berbagai pihak, baik dalam maupun luar negeri yang saling menguntungkan</li>
+		</ol>
+	</div>
 	
 	
 
